debug/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: curl
  name: curl
  namespace: cilium-test
spec:
  containers:
    - image: alpine/curl
      name: curl
      resources: {}
      command:
        - "sleep"
        - "3600"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
