debug/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: test-rule
  namespace: cilium-test
spec:
  endpointSelector:
    matchLabels:
      run: curl
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            run: nginx
      toPorts:
        - ports:
            - port: "80"
    - toFQDNs:
        - matchPattern: "*.google.com"
        - matchPattern: "google.com"
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
          rules:
            dns:
              - matchPattern: "*"
